- Refactored `AbstractCommandBus` to use `toList()` instead of `collect(Collectors.toList())` - Added type-safe deserialization method `deserialize(Class<T>)` in `EventJSON` for improved flexibility and usability.